feat: add new config variables and change ip address